# soft_rasterization

./: .gitignore  CMakeLists.txt  main.cpp  output.tga
src/: types.h
src/core/: frame_buffer.cpp  frame_buffer.h  renderer.cpp  renderer.h
src/geometry/: geometry.h
src/misc/: geometry_utils.cpp  geometry_utils.h  math_utils.h
third_part/: tgaimage.cpp  tgaimage.h
